tests/cases/memory/errors/zone-scratch-outer-binding-escape.ari
fn main() -> i64 {
  var leaked: ptr i64 = null;
  {
    let item = zone::scratch<i64>(64, 5);
    leaked = item;
  }
  return 0;
}
